# sicxe

./: .gitignore  CMakeLists.txt  main.cpp
asm/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SicCST.cpp  SicCST.h
asm/ast/: Forward.h  SicAST.cpp  SicAST.h  SymbolTable.cpp  SymbolTable.h  Visitor.cpp  Visitor.h
common/: Flags.cpp  Flags.h  Mnemonics.cpp  Mnemonics.h  SicTypes.cpp  SicTypes.h
sim/: Device.cpp  Device.h  Disassembler.cpp  Disassembler.h  Machine.cpp  Machine.h  Memory.cpp  Memory.h  ObjLoader.cpp  ObjLoader.h  Registers.cpp  Registers.h
test_programs/: addr.asm  arith.asm  cat.asm  csect1.asm  csect2.asm  csect_blocks.asm  csect_main.asm  csect_simple.asm  empty_csect.asm  equ.asm  halt.asm  jumps.asm  section.asm  simple.asm  start.asm  subr.asm  tix.asm  use_simple.asm
